Initialized site with jumbotron and background; basic content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -20,6 +24,27 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-4">Welcome Back, Senpai!</h1>
+        <p class="lead">Fuhrer</p>
+        <hr class="my-4" />
+        <p class="lead">
+          "According to all known laws of aviation, a bee should not be able to
+          fly." -Jesus Christ.
+        </p>
+
+        <p class="lead">
+          <a
+            class="btn btn-primary btn-lg"
+            href="https://img4.zergnet.com/3607299_300.jpg"            role="button"
+            >Stop The Jews</a
+          >
+        </p>
+
+        <img src="./cert.png" alt="coool guy" class="img-fluid" />
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
