--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <link
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono"
-      rel="stylesheet"
-    />
-    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,900"
+      rel="stylesheet"
     />
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
@@ -37,8 +37,10 @@
         <p class="lead">
           <a
             class="btn btn-primary btn-lg"
-            href="https://img4.zergnet.com/3607299_300.jpg"            role="button"
-            >Stop The Jews</a
+            href="https://img4.zergnet.com/3607299_300.jpg"
+            role="button"
+            id="button"
+            >Show me the Money</a
           >
         </p>
 
