did some things

--- a/index.html
+++ b/index.html
@@ -29,22 +29,41 @@
         <h1 class="display-4">Welcome Back, Senpai!</h1>
         <p class="lead">Fuhrer</p>
         <hr class="my-4" />
-        <p class="lead">
-          "According to all known laws of aviation, a bee should not be able to
-          fly." -Jesus Christ.
+        <p>
+          Calling all christains, A devient has tresspassed upon this holy
+          ground.
         </p>
 
-        <p class="lead">
+        <p>
           <a
-            class="btn btn-primary btn-lg"
+            class="btn btn-lg"
             href="https://img4.zergnet.com/3607299_300.jpg"
             role="button"
             id="button"
-            >Show me the Money</a
+            >Take me there!</a
           >
         </p>
+      </div>
+      <div class="jumbotron" id="content">
+        <h1 class="text-center">MISSION: KILL THOTS</h1>
+        <hr />
+        <div class="row text-center">
+          <div class="col">
+            <img src="./cert.png" alt="coool guy" class="img-fluid" />
+          </div>
 
-        <img src="./cert.png" alt="coool guy" class="img-fluid" />
+          <div class="col">
+            <img
+              src="https://i.imgur.com/fA67DtY.png"
+              alt="THOT"
+              class="img-fluid"
+            />
+          </div>
+
+          <div class="col">
+            <img src="./mom.jpg" alt="yourmom" class="img-fluid" />
+          </div>
+        </div>
       </div>
     </div>
     <script
