--- a/index.html
+++ b/index.html
@@ -29,43 +29,27 @@
         <h1 class="display-4">Welcome Back, Senpai!</h1>
         <p class="lead">Fuhrer</p>
         <hr class="my-4" />
-        <p>
-          Calling all christains, A devient has tresspassed upon this holy
-          ground.
-        </p>
+        <p>Eat. Sleep. Anime.</p>
+        <button
+          class="btn"
+          type="button"
+          onclick="window.location.href='https://img4.zergnet.com/3607299_300.jpg'"
+          id="button"
+        ></button>
+</div>
 
-        <p>
-          <a
-            class="btn btn-lg"
-            href="https://img4.zergnet.com/3607299_300.jpg"
-            role="button"
-            id="button"
-            >Take me there!</a
-          >
-        </p>
-      </div>
-      <div class="jumbotron" id="content">
-        <h1 class="text-center">MISSION: KILL THOTS</h1>
-        <hr />
+      <div class="jumbotron">
         <div class="row text-center">
-          <div class="col">
-            <img src="./cert.png" alt="coool guy" class="img-fluid" />
-          </div>
-
-          <div class="col">
-            <img
-              src="https://i.imgur.com/fA67DtY.png"
-              alt="THOT"
-              class="img-fluid"
-            />
-          </div>
-
-          <div class="col">
-            <img src="./mom.jpg" alt="yourmom" class="img-fluid" />
-          </div>
+          <h1>
+            Welcome to Your Mom™ inc. Where our company motto is "The best
+            gosh-darn lookin' genetically engineered cat girls that you've ever
+            seen!"
+          </h1>          
+          <div class="col"><img src="https://i.imgur.com/0GpmJEi.png" /></div>
         </div>
       </div>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
