video was added + cat girl  + title etc

--- a/index.html
+++ b/index.html
@@ -26,26 +26,21 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome Back, Senpai!</h1>
-        <p class="lead">Fuhrer</p>
+        <h1 id="breh" class="display-4">Welcome back, Senpai!</h1>
         <hr class="my-4" />
-        <p>Eat. Sleep. Anime.</p>
-        <button
-          class="btn"
-          type="button"
-          onclick="window.location.href='https://img4.zergnet.com/3607299_300.jpg'"
-          id="button"
-        ></button>
-</div>
+        <div class="jumbotron">
+          <div class="row text-center">
+            <h1>
+              Welcome to Your Neko™ inc. Where our company motto is "The best
+              gosh-darn lookin' genetically engineered cat girls that you've
+              ever seen!"
+            </h1>
+            <div class="col"><img src="https://i.imgur.com/0GpmJEi.png" /></div>
+          </div>
+        </div>
 
-      <div class="jumbotron">
-        <div class="row text-center">
-          <h1>
-            Welcome to Your Mom™ inc. Where our company motto is "The best
-            gosh-darn lookin' genetically engineered cat girls that you've ever
-            seen!"
-          </h1>          
-          <div class="col"><img src="https://i.imgur.com/0GpmJEi.png" /></div>
+        <div class="embed-responsive embed-responsive-16by9">
+          <video src="znepw.mp4" autoplay></video>
         </div>
       </div>
     </div>
