got rid of the gif and uysed strpes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-                <h1 id="breh" class="display-4">Welcome back, Senpai!</h1>
+                <h1 id="breh" class="display-4">Welcome Lord mcdomen!</h1>
                 <hr class="my-4" />
                 <div class="jumbotron">
                     <div class="row text-center">
